Added endpoint for already expired products